// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer class Renderer generateCategoryMetafile() generate _category_.yml file 1`] = `
{
  "docs/_category_.yml": "label: Foobar
link: null
position: 1
",
}
`;

exports[`renderer class Renderer generateCategoryMetafile() generate _category_.yml file with generated index 1`] = `
{
  "docs/_category_.yml": "label: Foobar
link: 
  type: generated-index
  title: 'Foobar overview'

position: 1
",
}
`;

exports[`renderer class Renderer renderHomepage() copies default homepage into output folder 1`] = `
{
  "generated.md": "Test Homepage",
}
`;

exports[`renderer class Renderer renderRootTypes() render root type 1`] = `
{
  "object/_category_.yml": "label: Object
link: null
position: 1
",
  "object/bar.mdx": "content",
  "object/foo.mdx": "content",
}
`;

exports[`renderer class Renderer renderSidebar() creates Docusaurus compatible sidebar.js into output folder 1`] = `
{
  "": "
/** @type {import('@docusaurus/plugin-content-docs').SidebarsConfig} */

module.exports = {
  "schemaSidebar": [
    {
      "type": "autogenerated",
      "dirName": "graphql"
    }
  ]
};
",
}
`;

exports[`renderer class Renderer renderTypeEntities() creates entity page into output folder 1`] = `
{
  "foobar/foo-bar.mdx": "Lorem ipsum",
}
`;
